# slurm

./: META  NEWS  configure  configure.ac  slurm.spec
contribs/: Makefile.am  Makefile.in
contribs/pam/: pam_slurm.c
contribs/pmi2/: Makefile.am  Makefile.in  pmi2_api.c  pmi2_version.map  testpmixring.c
contribs/pmi2/slurm/: pmi2.h
doc/html/: Makefile.am  accounting.shtml  configurator.html.in  cons_res.shtml  disclaimer.shtml  help.shtml  mail.shtml  meetings.shtml  news.shtml  publications.shtml  troubleshoot.shtml
doc/man/man1/: sacct.1  sacctmgr.1  salloc.1  sattach.1  sbatch.1  scancel.1  scontrol.1  sinfo.1  smap.1  squeue.1  srun.1  sstat.1  sview.1
doc/man/man5/: bluegene.conf.5  cgroup.conf.5  cray.conf.5  gres.conf.5  slurm.conf.5  slurmdbd.conf.5  topology.conf.5  wiki.conf.5
doc/man/man8/: slurmd.8  spank.8
slurm/: slurm.h.in
src/api/: step_launch.c
src/common/: env.c  env.h  jobacct_common.c  mpi.c  mpi.h  pack.c  plugstack.c  plugstack.h  read_config.c  slurm_protocol_api.c  slurm_protocol_api.h  slurm_protocol_defs.c  slurm_protocol_defs.h  slurm_protocol_pack.c  slurm_protocol_socket_implementation.c  xcgroup.c
src/salloc/: salloc.c
src/sbatch/: opt.c  sbatch.c
src/slurmctld/: job_mgr.c  job_scheduler.c  power_save.c  read_config.c  step_mgr.c  trigger_mgr.c
src/slurmd/common/: Makefile.am  Makefile.in  run_script.c
src/slurmdbd/: proc_req.c
src/sreport/: cluster_reports.c  common.c  job_reports.c  resv_reports.c  sreport.h  user_reports.c
src/srun/: srun_job.h
testsuite/expect/: test7.15.prog.c
(+42 files in other folders)
